# gloop-old

./: .gitignore  Makefile.in  config.in  configure.ac  gloop.pc.in
src/: Makefile.in  gloop_common.h
src/geometry/: BufferObject.cpp  BufferObject.hpp  VertexAttribute.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferBuilder.cpp  VertexBufferBuilder.hpp  VertexBufferObject.cpp  VertexBufferObject.hpp  VertexBufferObjectBuilder.cpp  VertexBufferObjectBuilder.hpp
src/image/: BitmapImage.cpp  BitmapImage.hpp  BitmapImageReader.cpp  BitmapImageReader.hpp  BmpImage.cpp  BmpImage.hpp  BmpImageReader.cpp  BmpImageReader.hpp  Image.cpp  Image.hpp  ImageFactory.cpp  ImageFactory.hpp  ImagePixbuf.cpp  ImagePixbuf.hpp
src/math/: Math.cpp  Math.hpp  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Vec4.cpp  Vec4.hpp
src/shader/: Code.hpp  Error.hpp  Preprocessor.cpp  Preprocessor.hpp  ProgramAnalyzer.cpp  ProgramAnalyzer.hpp  ProgramBuilder.cpp  ProgramBuilder.hpp  ShaderBuilder.cpp  ShaderBuilder.hpp  ShaderFactory.cpp  ShaderFactory.hpp
src/system/: BasicException.cpp  BasicException.hpp  Configuration.hpp  ErrorChecker.cpp  ErrorChecker.hpp
src/text/: Font.cpp  Font.hpp  Glyph.cpp  Glyph.hpp  GlyphFactory.cpp  GlyphFactory.hpp  GlyphPacker.cpp  GlyphPacker.hpp  GlyphRenderer.cpp  GlyphRenderer.hpp  GlyphTexture.cpp  GlyphTexture.hpp  TextRenderer.cpp  TextRenderer.hpp  text.frag  text.vert
src/texture/: PixelFormat.cpp  PixelFormat.hpp  TextureAnalyzer.cpp  TextureAnalyzer.hpp  TextureBuilder.cpp  TextureBuilder.hpp  TextureBuilder2D.cpp  TextureBuilder2D.hpp  TextureBuilder3D.cpp  TextureBuilder3D.hpp  TextureFactory.cpp  TextureFactory.hpp
src/transform/: Camera.cpp  Camera.hpp  MatrixStack.hpp  Projection.cpp  Projection.hpp  State.hpp
src/volume/: Dataset.cpp  Dataset.hpp  DatasetAnalyzer.cpp  DatasetAnalyzer.hpp  DatasetHeader.cpp  DatasetHeader.hpp  DatasetWriter.hpp  Index.hpp  OctreeBuilder.cpp  OctreeBuilder.hpp  OctreeNode.hpp
test/: .gitignore  Makefile.in  Runner.h  Test.h
test/geometry/: .gitignore  BufferObject.cxx  VertexBuffer.cxx  VertexBufferDrawTest.cxx  VertexBufferObject.cxx  VertexBufferObjectDrawTest.cxx
test/image/: BitmapImage.cxx  BitmapImageReader.cxx  BmpImage.cxx  BmpImageReader.cxx  Image.cxx
test/math/: Matrix.cxx  Quaternion.cxx  Vec4.cxx
test/shader/: Preprocessor.cxx  ProgramAnalyzer.cxx  ProgramBuilder.cxx  ShaderBuilder.cxx  basic.frag  basic.vert
test/system/: BasicException.cxx  Configuration.cxx  Path.cxx
test/text/: .gitignore  Font.cxx  Glyph.cxx  GlyphFactory.cxx  GlyphPacker.cxx  GlyphRenderer.cxx  GlyphTexture.cxx  GlyphTextureDrawTest.cxx  TextRenderer.cxx  texture.frag  texture.vert
test/transform/: .gitignore  Projection.cxx
test/volume/: Dataset.cxx  DatasetAnalyzer.cxx  DatasetHeader.cxx  DatasetWriter.cxx  OctreeBuilder.cxx
